# XMCY-ODC-test

./: .gitignore  README.md  old_requirements.txt  playwright_state.json  pyproject.toml  python-package.yml  requirements.txt
allure-report/: 143a3032-0604-400a-a7d0-750106ae8d1e-result.json  16fccf57-1b3a-4035-9512-8fb5a36400aa-container.json  254ecaab-1f9d-4ddf-9c19-3047eeb5e102-container.json  25a64e80-a68e-449e-9f1b-7a965847fa43-container.json  29e7b423-3c03-436c-a4cb-d3d7c0667992-result.json  2f9750c2-0bb9-4609-9a9e-8558ca03ab1d-container.json  30589ffd-4a92-494b-b303-90abeb537bf5-container.json  33012d0f-4105-494b-8cde-028a03a4aa43-result.json  4b02f998-553f-4ee1-9ac4-a571d194f31b-container.json  57b7202e-ea52-4c84-818f-2710517ad800-attachment.txt  59d2e114-f36d-4bbf-b6b8-d740310acd23-container.json  6c933709-52db-401d-bad8-5bf7d4313558-result.json  7288fb93-a409-44f4-a897-6c0c32cfafe1-attachment.txt  7fbe1994-6afd-4f88-b420-545d79bcc375-result.json  9bedfaec-3b42-4a0e-88cf-bef466a84e1d-container.json  aa3fb5df-9e6f-48f2-b214-37bccc9be790-result.json  c3468a88-e964-462a-80cb-f4188bee2734-container.json  ca0906dd-0d3a-456b-8ff0-05bbed2cc388-container.json  cbebefcb-4f09-434f-b899-7bcf342dd3da-result.json  cc333372-476b-44e1-9187-1b4910fc3630-container.json  cce8f854-8252-404f-b0a2-78d0dffb4426-result.json  d00d3e8e-3801-4d8d-8b07-e11db2ebfc39-result.json  d2871672-6069-4c4b-9590-687229165a92-container.json  d40001a1-a317-4b1c-8cb1-d74d38d5f2be-container.json  f75bd03b-e701-466c-954f-84a48ad26596-container.json  fd8f8752-67e6-4c8b-b4ab-fa1e98e19d43-result.json
(+50 files in other folders)
