[project]
name = "xmcy-odc-test"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-xdist (>=3.8.0,<4.0.0)",
    "pytest-base-url (>=2.1.0,<3.0.0)",
    "selenium (>=4.0.0)",
    "page-objects (>=1.1.0,<2.0.0)",
    "playwright (>=1.58.0,<2.0.0)",
    "pytest-playwright (>=0.7.2,<0.8.0)",
    "allure-pytest (>=2.15.3,<3.0.0)",
    "gitpython (>=3.1.46,<4.0.0)",
    "testfixtures (>=10.0.0,<11.0.0)",
    "retry (>=0.9.2,<0.10.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "tox (>=4.44.0,<5.0.0)"
]
